# FunCoding

./: .gitignore  README.md
backend/: .env.example  .env.example.local  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
backend/fast_api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/fast_api/data/code_examples/: example_0_hello_world.fs  example_1_stdin.fs  example_1_stdin_v2.fs  example_2_functions.fs  example_3_error.fs
backend/fast_api/data/problems/hello/: output.txt
backend/fast_api/fast_api/: main.py  settings.py
backend/fast_api/fast_api/models/: __init__.py
backend/fast_api/fast_api/routers/: fsharp.py  hello.py
backend/fast_api/fast_api/utils/: fantomas_format.py  run_fsharp.py  run_fsharp_mock.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.js  index.html  style.css
frontend/src/components/: challenge-body.js  coding-area.js  console.js  main-wrapper.js  text-editor.js
frontend/src/utils/: challenge.js  create-challenges.js
