[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["Mehdi Nassim KHODJA <18899702+naskio@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = { extras = ["standard"], version = "^0.18.1" }
pydantic = "^1.9.0"
environs = "^9.5.0"
requests = "^2.27.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fast_api.main:start"